[gd_scene load_steps=2 format=3 uid="uid://c8x5x5x5x5x5"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_0x5x5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x5x5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.4, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -100.0
text = "SOKOBAN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -50.0
text = "Mobile Edition"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
text = "Start Game"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]

[node name="InstructionsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 120.0
offset_right = 100.0
offset_bottom = 170.0
text = "Instructions"

[connection signal="pressed" from="InstructionsButton" to="." method="_on_instructions_button_pressed"]

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 190.0
offset_right = 100.0
offset_bottom = 240.0
text = "Quit"

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]

[node name="InstructionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
color = Color(0.1, 0.1, 0.1, 0.9)
visible = false

[node name="InstructionsLabel" type="Label" parent="InstructionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -60.0
text = "SOKOBAN Instructions:

• Touch the screen to move your character
• Push boxes onto red targets
• Complete all levels to win
• Use the center area for movement
• Avoid walls and obstacles

Good luck!"
autowrap_mode = 2

[node name="CloseInstructionsButton" type="Button" parent="InstructionsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = -10.0
text = "Close"

[connection signal="pressed" from="CloseInstructionsButton" to="." method="_on_close_instructions_button_pressed"]
